--- a/css/style.scss
+++ b/css/style.scss
@@ -1100,8 +1100,10 @@ height: 500px;
 a:hover {
     color: #191919;
     text-decoration: underline;
-    
+    transform: scale(1.2); /* Ändra storleken efter behov */
 }
+
+    }
 
 
     .container3 {
